tests/snapshots/yaml_suite_snapshots__yaml_suite_AZ63_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Sequence With Same Indentation as Parent Mapping
  from: NimYAML tests
  tags: indent mapping sequence
  yaml: "one:\n- 2\n- 3\nfour: 5\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :one\n   +SEQ\n    =VAL :2\n    =VAL :3\n   -SEQ\n   =VAL :four\n   =VAL :5\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"one\": [\n    2,\n    3\n  ],\n  \"four\": 5\n}\n"
