tests/snapshots/yaml_suite_snapshots__yaml_suite_AZW3_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Lookahead test cases
  from: NimYAML tests
  tags: mapping edge
  yaml: "- bla\"keks: foo\n- bla]keks: foo\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    =VAL :bla\"keks\n    =VAL :foo\n   -MAP\n   +MAP\n    =VAL :bla]keks\n    =VAL :foo\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"bla\\\"keks\": \"foo\"\n  },\n  {\n    \"bla]keks\": \"foo\"\n  }\n]\n"
