tests/snapshots/yaml_suite_snapshots__yaml_suite_AZW3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: NimYAML tests
  json: "[\n  {\n    \"bla\\\"keks\": \"foo\"\n  },\n  {\n    \"bla]keks\": \"foo\"\n  }\n]\n"
  name: Lookahead test cases
  tags: mapping edge
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    =VAL :bla\"keks\n    =VAL :foo\n   -MAP\n   +MAP\n    =VAL :bla]keks\n    =VAL :foo\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- bla\"keks: foo\n- bla]keks: foo\n"
