tests/snapshots/yaml_suite_snapshots__yaml_suite_B3HG_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Spec Example 8.9. Folded Scalar [1.3]"
  from: "G992, modified for YAML 1.3"
  tags: spec folded scalar 1.3-mod
  yaml: "--- >\n folded\n text\n↵\n↵\n"
  tree: "+STR\n +DOC ---\n  =VAL >folded text\\n\n -DOC\n-STR\n"
  json: "\"folded text\\n\"\n"
  dump: ">\n  folded text\n"
  emit: "--- >\n  folded text\n"
