tests/snapshots/yaml_suite_snapshots__yaml_suite_B63P_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Directive without document
  from: AdaYaml tests
  tags: error directive document
  fail: true
  yaml: "%YAML 1.2\n...\n"
  tree: "+STR\n"
