tests/snapshots/yaml_suite_snapshots__yaml_suite_B63P_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: AdaYaml tests
  name: Directive without document
  tags: error directive document
  tree: "+STR\n"
  yaml: "%YAML 1.2\n...\n"
